# playtitle

./: .gitignore  pyproject.toml
config/: credentials.json
playtitle/: cli.py
playtitle/domain/entities/: artist.py  playlist.py  song.py  spotify_playlist.py  spotify_song.py
playtitle/infra/cohere/: client.py  title_generator.py
playtitle/infra/interfaces/: llm_client.py
playtitle/infra/spotify/: client.py
playtitle/infra/spotify/repository/: playlist.py
playtitle/use_cases/: generate_title_for_spotify_playlist.py  get_all_songs.py
playtitle/utils/: rate_limited_batch_processing.py
tests/infra/cohere/: test_cohere_client.py
tests/infra/spotify/: test_client.py  test_playlist.py  test_spotify_client.py
tests/integration/infra/cohere/: test_cohere_client.py
tests/integration/infra/spotify/: test_spotify_client.py
tests/unit/domain/: test_playlist.py  test_song.py  test_spotify_playlist.py
tests/unit/infra/spotify/: test_get_playlist.py
tests/use_cases/: test_get_all_songs.py
